<resources>
    <string name="app_name">RutasCBC</string>
    <string name="edt_nombre">Usuario</string>
    <string name="edt_correo">Email</string>
    <string name="edt_contraseña">Contraseña</string>
    <string name="edt_confirmar_contraseña">Repetir Contraseña</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_iniciar_sesion">Iniciar Sesion</string>
    <string name="title_activity_login">Login</string>
    <string name="txv_login">Login</string>
    <string name="btn_entrar">Entrar</string>
    <string name="title_activity_menu">Menu</string>
    <string name="btn_agregar_titulacion">Agregar Titulacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="txv_agregar_titulacion">Agregar Titulacion</string>
    <string name="action_settings">Cerrar Sesion</string>
    <string name="txv_registro">Registro</string>
    <string name="title_activity_mapa">Map</string>
    <string name="edt_titulacion">Titulacion</string>
    <string name="btn_registrar_titulacion">Registrar Titulacion</string>
    <string name="ficha">Ficha</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="edt_chat">Escribe tu mensaje</string>
    <string name="letra_txv">fffffffffffff</string>
    <string name="letra_tx">ffcfff</string>
    <string name="integrant_oscar">OSCAR WILLIAM RIVERO ORDOÑEZ</string>
    <string name="integrant_deivis">DEIVIS RAFAEL EGUIS OSORIO</string>
    <string name="integrant_eimys">EIMYS PASSO OSPINO</string>
    <string name="integrant_loraines">LORAINES PAOLA ZAPATA</string>
    <string name="aprendiz">Aprendiz</string>
    <string name="conductor">Conductor</string>
    <string name="mostrar_ruta">Mostrar Ruta</string>
    <string name="title_activity_mapa2">Maparrr</string>
    <string name="integrantes">Integrantes</string>
    <string name="txv_ficha">Ficha:  1129600</string>
</resources>
