<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.misena.oscar.rutascbc.vista.RegistroLogin">
    <TextView
        android:id="@+id/txv_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:text="@string/txv_registro"
        android:textSize="@dimen/txv_login"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/edt_nombre"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edt_correo"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:hint="@string/edt_correo"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edt_contrasena"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="190dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/edt_contraseña"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edt_repetir_contrasena"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/edt_confirmar_contraseña"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:onClick="registro"
        android:text="@string/btn_registrarse"
        android:background="@color/color_meenu"
        android:textColor="@color/cardview_light_background"/>
    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
       android:layout_centerHorizontal="true"
        android:text="@string/btn_iniciar_sesion"
        android:background="@color/color_meenu"
        android:textColor="@color/cardview_light_background"/>

</RelativeLayout>
