<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.misena.oscar.rutascbc.vista.Login"
    tools:showIn="@layout/activity_login"
    android:id="@+id/lay_login">
<TextView
    android:id="@+id/txv_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txv_login"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="20dp"
    android:textSize="@dimen/txv_login"
    android:textStyle="bold"/>

    <ImageView
        android:id="@+id/img_login_usuario"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="65dp"
        app:srcCompat="@mipmap/usuario" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout"
        android:hint="@string/edt_nombre"
        android:layout_below="@+id/txv_login"
        android:layout_alignLeft="@+id/inputContra"
        android:layout_alignStart="@+id/inputContra">

        <EditText
            android:id="@+id/edt_usuario"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:inputType="text"
            android:textStyle="bold"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/edt_contraseña"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/edt_contrasena_login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:textStyle="bold"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/img_login_contra"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="160dp"
        app:srcCompat="@mipmap/iconokeys" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:onClick="login"
        android:text="@string/btn_entrar"
        android:background="@drawable/selector_botones"
        android:textColor="@color/cardview_light_background"/>

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:onClick="registroLogin"
        android:text="@string/btn_registrarse"
        android:background="@drawable/selector_botones"
        android:textColor="@color/cardview_light_background"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/img_login_contra"
        android:layout_alignStart="@+id/img_login_contra"
        android:layout_below="@+id/btn_registrarse" >

        <RadioButton
            android:id="@+id/radioAprendiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aprendiz"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioConductor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/conductor" />
    </RadioGroup>


</RelativeLayout>
